--- a/.dvc/config
+++ b/.dvc/config
@@ -1,6 +1,6 @@
 [core]
     remote = remote_storage
 ['remote "remote_storage"']
-    url = /Talem/dvc_remote
+    url = /home/hardik/dvc_remote
 ['remote "myremote"']
-    url = ../Home/Talem/dvc_remote
+    url = ../home/hardik/dvc_remote
